grade.txt
Grade: 22.00/35.00

1 Deduction(s):

--------------
#1: 35.00 points
Failing test: cannot import a0/a0.py
  File "students/sandeep-17IIT/a0/a0.py", line 46

    <<<<<<< HEAD

     ^

SyntaxError: invalid syntax
--------------

